--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title><HW-11></title>
+  <title><HW-12></title>
 
   <link rel="stylesheet" href="node_modules/izitoast/dist/css/iziToast.min.css" />
   <link rel="stylesheet" href="node_modules/simplelightbox/dist/simple-lightbox.min.css" />
@@ -22,8 +22,11 @@
       <button class="submit-btn" type="submit">Search</button>
     </form>
 
-    <span class="loader"></span>
+
     <ul class="gallery"></ul>
+    <button class="load-more hidden">Load more</button>
+    <span class="loader"></span>
+
   </main>
 
   <script type="module" src="./main.js"></script>
